--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="page"> After learning a course  we all come together and work on a project where u won't just learn but profit from the project itself. 
                     And we also aid you for your project from start to finish</div>
                     <div class="contain"><img src="luca-bravo-XJXWbfSo2f0-unsplash (1).jpg" class="client"></div>
-                <div class="page">We know it's to good too be true, that why there are limited slot, only 400 people can join this platform</div>
+                <div class="page">We know it's to good too be true, that why there are limited slot, only 700 people can join this platform At an affordable price for life</div>
                 <a href="https://t.me/Vile_emp" class="contain"><img src="thisisengineering-ZPeXrWxOjRQ-unsplash (1).jpg" class="client"></a>
                 <div class="page">any question click the button below;</div>
                 <div class="reserver"><a href="https://t.me/Vile_emp" class="button2"><img src="icons8-online-support-48.png"></a></div>
